@@ -14,10 +14,10 @@ index c972b3bc0b..18b5a6ee4f 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 8b181edc84..f74adbd633 100644
+index d5c62b1b20..bcaef8bf18 100644
 --- a/Changes
 +++ b/Changes
-@@ -1219,11 +1219,6 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1223,11 +1223,6 @@ OCaml 5.0.0 (15 December 2022)
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index 8b181edc84..f74adbd633 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -1252,6 +1247,30 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1256,6 +1251,30 @@ OCaml 5.0.0 (15 December 2022)
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -60,7 +60,7 @@ index 8b181edc84..f74adbd633 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -1287,13 +1306,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1291,13 +1310,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -76,7 +76,7 @@ index 8b181edc84..f74adbd633 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -1400,6 +1419,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1404,6 +1423,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -86,7 +86,7 @@ index 8b181edc84..f74adbd633 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1663,6 +1685,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1667,6 +1689,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10086,7 +10086,7 @@ index 0000000000..5c2feef533
 +                 -e 's/\d027\[m/\d027[0m/g' \
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..6067fd2dc9
+index 0000000000..b4cea9c7fa
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10023 @@
@@ -10106,10 +10106,10 @@ index 0000000000..6067fd2dc9
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 8b181edc84..f74adbd633 100644
++index d5c62b1b20..bcaef8bf18 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -1219,11 +1219,6 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1223,11 +1223,6 @@ OCaml 5.0.0 (15 December 2022)
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10121,7 +10121,7 @@ index 0000000000..6067fd2dc9
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -1252,6 +1247,30 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1256,6 +1251,30 @@ OCaml 5.0.0 (15 December 2022)
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10152,7 +10152,7 @@ index 0000000000..6067fd2dc9
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -1287,13 +1306,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1291,13 +1310,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10168,7 +10168,7 @@ index 0000000000..6067fd2dc9
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -1400,6 +1419,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1404,6 +1423,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10178,7 +10178,7 @@ index 0000000000..6067fd2dc9
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1663,6 +1685,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1667,6 +1689,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
